Refactor `GraleCorpusRoundTripTest`: remove unused import, update resource handling with try-with-resources, replace deprecated `collect(Collectors.toList())`, and fix `asText()` to `asString()`.